--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script type="text/javascript">
-		var nameBuilder = function(firstName="John", lastName="Doe") {
-			console.log(firstName + " " + lastName);
-		};
-
-		nameBuilder();
-	</script>
+	<script src="dist/bundle.js"></script>
 	<title>Working with Babel</title>
 </head>
 <body>
